--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UFT-8" />
   <title> Survey Form</title>
+   <link rel="stylesheet" href="style.css">
+  </head>
   
 <body>
   <h1 id="title">Complaint form</h1>
